# Road_Painter_4th

./: .gitignore  README.md  Road-Painter_기술명세서_SRS_v1.6_최종 (1).md  Road-Painter_기술명세서_SRS_v1.7_draft.md  github 작성 규칙.md
Client/Demo-2/: .gitignore  CMakeLists.txt  README.md
Client/Demo-2/docs/: SCHEMA.md
Client/Demo-2/qml/: AppButton.qml  AppSwitch.qml  CctvScene.qml  ChannelStrip.qml  LabeledSlider.qml  Main.qml  PanelSection.qml  PathOverlay.qml  PathSaveDialog.qml  PresetDialog.qml  RobotMarker.qml  SideToolButton.qml  Theme.qml  Toast.qml  VideoViewport.qml
Client/Demo-2/resources/: sample_path_legacy.json  sample_path_meter.json  sample_path_pixel.json
Client/Demo-2/shaders/: videofilter.frag
Client/Demo-2/src/: filtersettings.cpp  filtersettings.h  main.cpp  pathmodel.cpp  pathmodel.h  presetlibrary.cpp  presetlibrary.h  robotsimulator.cpp  robotsimulator.h
Client/Demo-Project/: CMakeLists.txt  PathSaveDialog.h  README.md  channelsettings.cpp  channelsettings.h  channelsettings.ui  custom.qss  labdialog.cpp  labdialog.h  labdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  robotsettings.cpp  robotsettings.h  robotsettings.ui  settingdialog.cpp  settingdialog.h  settingdialog.ui  settingsdialog.h  settingsdialog.ui  video_worker.cpp  video_worker.h  videosettingsdialog.cpp  videosettingsdialog.h  videosettingsdialog.ui  videowidget.cpp  videowidget.h
Paint_Robot/RaspberryPi/: CMakeLists.txt  README.md
Paint_Robot/RaspberryPi/driver/: Makefile  driver_test.cpp  mpu6050_driver.c  mpu6050_overlay.dts
Paint_Robot/RaspberryPi/include/: NetworkManager.h  PathFollower.h  RobotTypes.h  SerialManager.h
Paint_Robot/RaspberryPi/src/: .gitkeep  NetworkManager.cpp  PathFollower.cpp  SerialManager.cpp  imu_test.cpp  main.cpp  motor_test.cpp  poling.cpp  robot_sim.cpp  rpi_tx_main.cpp
Paint_Robot/STM32/: .cproject  .mxproject  .project  HARDWARE_WIRING_KR.md  MOTOR_SETUP_KR.md  RPI_HANDOFF_FINAL_KR.md  Robot_Painter Debug.cfg  Robot_Painter Debug.launch  Robot_Painter.ioc
Paint_Robot/STM32/Core/Inc/: FreeRTOSConfig.h  app_rtos.h  control_arbiter.h  ir_remote.h  main.h  motor.h  packet_parser.h  robot_config.h  robot_control.h  servo.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  uart_protocol.h  uart_transport.h
Paint_Robot/STM32/Core/Src/: app_rtos.c  control_arbiter.c  freertos_hooks.c  gpio.c  ir_remote.c  main.c  motor.c  packet_parser.c  robot_control.c  servo.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  syscalls.c  tim.c  uart_protocol.c  uart_transport.c  usart.c
Paint_Robot/STM32/Core/Startup/: startup_stm32f401retx.s
Paint_Robot/STM32/Tests/: ref_ir_remote_f103.c  ref_ir_remote_f103.h  ref_servo_motor_f103.c  ref_servo_motor_f103.h  test_ir_decode.py  test_uart_protocol.py  uart_protocol_test.c  uart_smoke_test.py
Server/: .gitignore  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  TESTING.md  gen_cert.sh  start.sh
Server/admin_console/: .gitignore  PLAN.md  cctv.py  config.sh.example  pose_server.py  rp_core.py  start.sh  web_gui.py
Server/certs/: README.md  server.crt
Server/docs/: CCTV_CAMERA_SPEC.md  QT_CLIENT_SPEC.md  REFACTOR_SUMMARY.md  ROBOT_INTEGRATION_TODO.md
Server/include/: geometry.hpp  messages.hpp
Server/src/: calib.hpp  log.hpp  main.cpp  path_builder.hpp  path_planner.hpp  pose_builder.hpp  protocol.hpp  router.cpp  router.hpp  tls_server.cpp  tls_server.hpp  user_store.cpp  user_store.hpp
Server/src/net/: tls_server.cpp  tls_server.hpp
Server/tools/: calibrate.py  compute_homography.py  floor_region.py  qt_sim.cpp  record_markers.py
